<resources>
    <string name="app_name" translatable="false">Dicoding Story</string>

    <!-- ActionBar Title -->
    <string name="signin_title">Account Login</string>
    <string name="signup_title">Account Register</string>
    <string name="detail_title">Story Detail</string>
    <string name="story_title">Create Story</string>
    <string name="auth_title_desc">Please enter the required fields.</string>
    <string name="gallery_title">Choose a Picture</string>
    <string name="language">Language</string>

    <!-- Input Hint -->
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="description">Description</string>
    <string name="location">Location</string>

    <!-- Button Text -->
    <string name="signin_button">Login</string>
    <string name="signup_button">Register</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="logout_confirm">Yes, logout</string>
    <string name="ok" translatable="false">OK</string>
    <string name="retry">Try again</string>

    <!-- Netral -->
    <string name="back">Back</string>
    <string name="image_preview">Image Preview</string>
    <string name="story">Story</string>
    <string name="logout">Logout</string>
    <string name="story_date">Uploaded on %1$s</string>

    <!-- Dummy -->
    <string name="story_name_dummy">Novandi Ramadhan</string>
    <string name="story_desc_dummy">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>

    <!-- Error Message -->
    <string name="error_name_empty">Name is required.</string>
    <string name="error_email_empty">Email is required.</string>
    <string name="error_email_invalid">Invalid email.</string>
    <string name="error_password_empty">Password is required.</string>
    <string name="error_password_length">Password must be more than 8 characters.</string>
    <string name="error_camera_open">Failed to open the camera</string>
    <string name="error_camera_permission">Not getting permission</string>
    <string name="error_camera_capture">Failed to capture image</string>
    <string name="error_description_empty">Description is required.</string>
    <string name="error_image_null">Please choose an image</string>
    <string name="error_location_not_found">Location is not found. Try Again</string>
    <string name="error_location_permission">Not getting location permission</string>

    <!-- Dialog Text -->
    <string name="logout_title">Logout Account</string>
    <string name="logout_desc">Are you sure want to logout your account?</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="language_title">Change Language</string>

    <!-- Success Message -->
    <string name="success_camera_capture">Image captured successfully</string>
    <string name="success_story_create">Story uploaded successfully</string>

    <!-- Maps -->
    <string name="title_activity_maps">Story Maps</string>
    <string name="maps">Maps</string>
</resources>