<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/iv_dicoding"
        android:layout_width="124dp"
        android:layout_height="108dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/dicoding_logo_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/header_auth"
        android:orientation="vertical"
        android:paddingHorizontal="32dp"
        android:paddingTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_dicoding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingVertical="8dp"
            android:text="@string/signin_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_title_desc"
            android:textColor="@color/gray" />

        <com.novandi.dicodingstory.components.EmailEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:hint="@string/email"
            tools:ignore="SpeakableTextPresentCheck" />

        <com.novandi.dicodingstory.components.PasswordEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="48dp"
            android:text="@string/signin_button"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_signin_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:backgroundTint="?attr/colorOnPrimary"
            android:text="@string/signup_title"
            android:textColor="?attr/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible"
        tools:visibility="visible"
        app:indicatorColor="@color/navy_500"
        android:indeterminate="true"
        android:background="@drawable/loading_shape"/>

</androidx.constraintlayout.motion.widget.MotionLayout>