<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Card"
    android:id="@+id/story_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:elevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/story_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/image_preview" />

        <TextView
            android:id="@+id/story_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/story_name_dummy"
            android:textColor="?attr/colorPrimary"
            android:paddingHorizontal="16sp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:maxLines="1"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/story_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/story_desc_dummy"
            android:textColor="?attr/colorPrimary"
            android:paddingHorizontal="16sp"
            android:paddingBottom="16dp"
            android:maxLines="2"/>
        
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>